fixed home page margins and prevented horizontal scrolling

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,7 +1,7 @@
 .button-container {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 60%;
   padding: 0;
   transform: translate(-200px);
@@ -131,8 +131,8 @@
   .button-container {
     position: relative;
     display: flex;
-    justify-content: space-between;
-    margin-top: 70px;
+    justify-content: space-evenly;
+    margin-top: 200px;
     padding: 0;
     width: 100%;
   }
@@ -155,8 +155,8 @@
   .button-container {
     position: relative;
     display: flex;
-    justify-content: space-between;
-    margin-top: 70px;
+    justify-content: space-evenly;
+    margin-top: 200px;
     padding: 0;
     width: 100%;
   }
@@ -179,8 +179,8 @@
   .button-container {
     position: relative;
     display: flex;
-    justify-content: space-between;
-    margin-top: 70px;
+    justify-content: space-evenly;
+    margin-top: 200px;
     padding: 0;
     width: 100%;
   }
